Bug 116812 - FORMATTING: Font size regression (Microsoft's Bahnschrift)
Summary: FORMATTING: Font size regression (Microsoft's Bahnschrift)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.6.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:6.1.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-05 07:31 UTC by svv1999
Modified: 2019-09-23 19:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
The example odt.file mentioned in report (729.78 KB, application/vnd.oasis.opendocument.text)
2018-04-05 07:35 UTC, svv1999
Details
Correct Layout (60.68 KB, image/jpeg)
2018-04-05 07:38 UTC, svv1999
Details
Distorted layout after upgrade (42.12 KB, image/jpeg)
2018-04-05 07:39 UTC, svv1999
Details
Layout in LO 5.4.6.2 (24.24 KB, image/jpeg)
2018-04-05 08:47 UTC, Dieter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description svv1999 2018-04-05 07:31:35 UTC
Description:
The same holds for 6.0.2. On reinstalling 5.3.4 the Layout is ok again.

Steps to Reproduce:
1. Install 5.4.3; Screenshoot Example
2. upgrade to 5.4.6; Screenshoot Example

Actual Results:  
The screenshots differ

Expected Results:
No difference can be detected


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 5.3.4.2 (x64)
Build-ID: f82d347ccc0be322489bf7da61d7e4ad13fe2ff3
CPU-Threads: 12; BS-Version: Windows 6.19; UI-Render: GL; Layout-Engine: neu; 
Gebietsschema: de-DE (de_DE); Calc: group


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.140 Safari/537.36 Edge/17.17133
Comment 1 svv1999 2018-04-05 07:35:16 UTC
Created attachment 141108 [details]
The example odt.file mentioned in report
Comment 2 svv1999 2018-04-05 07:38:22 UTC
Created attachment 141109 [details]
Correct Layout
Comment 3 svv1999 2018-04-05 07:39:32 UTC
Created attachment 141110 [details]
Distorted layout after upgrade
Comment 4 Dieter 2018-04-05 08:47:35 UTC
Created attachment 141113 [details]
Layout in LO 5.4.6.2

I get this version of the layout
Comment 5 Buovjaga 2018-04-15 17:06:58 UTC
Bisected to https://cgit.freedesktop.org/libreoffice/core/commit/?id=1b7e788eb3bf9cbe56ed5cc4a3fa7fa5e70ac40a

commit 1b7e788eb3bf9cbe56ed5cc4a3fa7fa5e70ac40a (patch)
tree 22f3cf0ce23ca99f1759502465627790f868a6f2
parent 7633cbb0e84d20a36b2972c6fd5c0d5a5d6280a3 (diff)
The mfFontScale[n] is always 1.0
Change-Id: Ica2e67632f5bfe1f70ba7b2d7502257b47d053ce
Reviewed-on: https://gerrit.libreoffice.org/32592

Adding Khaled to CC
Comment 6 Khaled Hosny 2018-04-15 22:22:16 UTC
(In reply to Buovjaga from comment #5)
> Bisected to
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=1b7e788eb3bf9cbe56ed5cc4a3fa7fa5e70ac40a
> 
> commit 1b7e788eb3bf9cbe56ed5cc4a3fa7fa5e70ac40a (patch)
> tree 22f3cf0ce23ca99f1759502465627790f868a6f2
> parent 7633cbb0e84d20a36b2972c6fd5c0d5a5d6280a3 (diff)
> The mfFontScale[n] is always 1.0
> Change-Id: Ica2e67632f5bfe1f70ba7b2d7502257b47d053ce
> Reviewed-on: https://gerrit.libreoffice.org/32592
> 
> Adding Khaled to CC

There was the followup commit 843c6d6eec95b99e867c28ab27860215d5d72b37 to fix bug 106960 caused by this one, does it make any difference here?
Comment 7 Buovjaga 2018-04-16 06:52:05 UTC
(In reply to Khaled Hosny from comment #6)
> There was the followup commit 843c6d6eec95b99e867c28ab27860215d5d72b37 to
> fix bug 106960 caused by this one, does it make any difference here?

Sorry for not making it clear, but there is no difference between 5.4 and master.

Version: 6.1.0.0.alpha0+ (x64)
Build ID: c8c74a0b4ca6f3a3619f423b6548c80c52392ae0
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-04-15_00:12:41
Locale: fi-FI (fi_FI); Calc: group
Comment 8 Khaled Hosny 2018-04-16 07:58:03 UTC
(In reply to Buovjaga from comment #7)
> (In reply to Khaled Hosny from comment #6)
> > There was the followup commit 843c6d6eec95b99e867c28ab27860215d5d72b37 to
> > fix bug 106960 caused by this one, does it make any difference here?
> 
> Sorry for not making it clear, but there is no difference between 5.4 and
> master.
> 
> Version: 6.1.0.0.alpha0+ (x64)
> Build ID: c8c74a0b4ca6f3a3619f423b6548c80c52392ae0
> CPU threads: 4; OS: Windows 10.0; UI render: default; 
> TinderBox: Win-x86_64@42, Branch:master, Time: 2018-04-15_00:12:41
> Locale: fi-FI (fi_FI); Calc: group

I meant it would have been broken again by another commit, have you tried checking with a build exactly at 843c6d6eec95b99e867c28ab27860215d5d72b37 to see if it works there?
Comment 9 Buovjaga 2018-04-16 09:27:01 UTC
(In reply to Khaled Hosny from comment #8)
> I meant it would have been broken again by another commit, have you tried
> checking with a build exactly at 843c6d6eec95b99e867c28ab27860215d5d72b37 to
> see if it works there?

Ok, sorry about that. I found it in win-5.4 with git log --all --grep='843c6d6eec95b99e867c28ab27860215d5d72b37'
So I did git checkout 8c3429cc35c434559bf0552b9182cb9b7e404ca9

The problem is seen in that commit as well.
Comment 10 Commit Notification 2018-04-17 10:12:11 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=335036f0d05bdfde49cacf245863c686d07a2d5f

tdf#116812: Revert "The mfFontScale[n] is always 1.0"

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.