tdf#116812: Revert "The mfFontScale[n] is always 1.0"

This reverts commit 1b7e788eb3bf9cbe56ed5cc4a3fa7fa5e70ac40a
and followup commit 843c6d6eec95b99e867c28ab27860215d5d72b37.

Change-Id: I42d1ab76778466db356f0597c90e1afc2dc9997d