vcl/win/gdi/salgdi.cxx
@@ -607,6 +607,7 @@ WinSalGraphics::WinSalGraphics(WinSalGraphics::Type eType, bool bScreen, HWND hW
     mbWindow(eType == WinSalGraphics::WINDOW),
     mbScreen(bScreen),
     mhWnd(hWnd),
+    mfCurrentFontScale(1.0),
     mhRegion(nullptr),
     mhDefPen(nullptr),
     mhDefBrush(nullptr),
@@ -625,6 +626,7 @@ WinSalGraphics::WinSalGraphics(WinSalGraphics::Type eType, bool bScreen, HWND hW
         mhFonts[ i ] = nullptr;
         mpWinFontData[ i ]  = nullptr;
         mpWinFontEntry[ i ] = nullptr;
+        mfFontScale[ i ] = 1.0;
     }
 }
 
